crates/vise/tests/ui/metrics/bogus_prefix.stderr
error[E0080]: evaluation panicked: Metric prefix `what?` is invalid: name contains a disallowed char '?' at position 4; allowed chars are [_a-z0-9]
 --> tests/ui/metrics/bogus_prefix.rs:4:20
  |
4 | #[metrics(prefix = "what?")]
  |                    ^^^^^^^ evaluation of `_` failed here
